refactor(cli): merge exception handling and improve Gradle run documentation
- Consolidates IOException and RuntimeException handling in Main.java
  to reduce duplication
- Adds Gradle run instructions to README for building without JAR
- Includes example command for quick testing using named flags
- Updates test assertions for consistency across Cli, CsvTapReader,
  CsvTripWriter, and AppTest

Co-Authored-By: Claude Sonnet <noreply@anthropic.com>